packages/cashc/test/compiler/ParseError/invalid_iso_date.cash
pragma cashscript >=0.8.0;

contract Test() {
    function test() {
        int d = date("02-16-2021 05:30:00 PM");
        require(d == 0);
    }
}
